# reader

./: .dockerignore  .gitignore  .rumdl.toml  CLAUDE.md  Dockerfile  README.md  dev.py  example-docker-compose.yml  example_feeds.txt  pyproject.toml  status.sh
.claude/: settings.local.json
.claude/agents/: spears-discover.md
specs/dev-workflow/: design.md  executive.md  requirements.md
specs/reading-curation/: design.md  executive.md  requirements.md
src/reader/: __init__.py  cli.py  config.py
src/reader/auth/: __init__.py  credentials.py  middleware.py
src/reader/bundle/: __init__.py  generator.py
src/reader/db/: __init__.py  connection.py  migrate.py  repository.py  reset.py
src/reader/extraction/: __init__.py  readability.py
src/reader/ingestion/: __init__.py  email.py  rss.py
src/reader/models/: __init__.py  article.py  elo.py  scoring.py  source.py
src/reader/refiner/: __init__.py  batch.py  characterization.py
src/reader/scoring/: __init__.py  elo.py  elo_scoring.py  llm.py  pairwise.py  prompts.py
src/reader/web/: __init__.py  app.py  templates_config.py
src/reader/web/routes/: __init__.py  api.py  inbox.py
src/reader/web/templates/: article.html  inbox.html  prompt_generation.html  prompt_history.html  refine.html  search.html  settings.html  stats.html
tests/: __init__.py  conftest.py  test_auth.py  test_heuristic_refiner.py  test_models.py  test_prompts.py  test_rss.py  test_search.py
