[project]
name = "reader"
version = "0.1.0"
description = "Self-hosted reading curation system with LLM scoring"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
    # Validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # HTTP client
    "httpx>=0.27.0",
    # Content processing
    "feedparser>=6.0.0",
    "readability-lxml>=0.8.0",
    "lxml>=5.3.0",
    "markdownify>=0.13.0",
    # LLM
    "anthropic>=0.39.0",
    # Auth
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    # Formatting & linting
    "ruff>=0.7.0",
    # Type checking
    "mypy>=1.13.0",
    "pyright>=1.1.389",
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.115.0",
]

[project.scripts]
reader = "reader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reader"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "RUF",    # ruff-specific
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["reader"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
# Per-module overrides for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "feedparser.*",
    "readability.*",
    "markdownify.*",
]
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
exclude = ["**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false  # Too noisy for some deps

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]
